k8s/manifests-1d75e6/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-1d75e6
  namespace: journee
  labels:
    app: journee-1d75e6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-1d75e6
  template:
    metadata:
      labels:
        app: journee-1d75e6
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-1d75e6
          image: gcr.io/my-docker-471807/journee:1d75e6-a4b52b
          ports:
            - containerPort: 3000
