k8s/manifests-1d75e6/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-1d75e6
  namespace: journee
spec:
  selector:
    app: journee-1d75e6
  ports:
    - port: 80
      targetPort: 3000
